--- a/style.css/global.css
+++ b/style.css/global.css
@@ -25,6 +25,7 @@
     --shape-hover: #383D42;
 
     /* text */
+    --text-logo: #FF598B;
     --text-body: #C8CDD0;
     --text-heading: #F9F9F9;
 
