--- a/style.css/forms.css/fields.css/sobre-evento.css
+++ b/style.css/forms.css/fields.css/sobre-evento.css
@@ -1,5 +1,5 @@
 .evento-sobre > legend {
-  padding-left: 36px;
+  padding-left: 2.25rem;
   background-color: var(--place-holder);
   background: url(/assets/icons/calendar.svg)
   center
@@ -11,7 +11,7 @@
 /*== DATAS ==*/
 .contact-grid {
   display: flex;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .contact-grid .field-wrapper {
@@ -23,19 +23,19 @@
 .fields-flex {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 1rem;
   
 }
 
 .type-selection {
   display: flex;
-  gap: 4px;
-  width: 272px;
-  height: 48px;
+  gap: .25rem;
+  width: 17rem;
+  height: 3rem;
   background-color: var(--input-base);
   border: 1px solid var(--input-stroke);
-  border-radius: 8px;
-  padding: 4px;
+  border-radius: .5rem;
+  padding: .25rem;
   position: relative;
 }
 
@@ -44,8 +44,8 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  border-radius: 6px;
-  padding: 10.5px 18px;
+  border-radius: .375rem;
+  padding: .65625rem 1.125rem;
   width: 100%;
 }
 
@@ -55,7 +55,7 @@
 }
 
 .type-option label {
-  margin: 8px;
+  margin: .5rem;
 }
 
 .type-option input[type="radio"]:checked + svg {
