--- a/style.css/forms.css/index.css
+++ b/style.css/forms.css/index.css
@@ -1,25 +1,33 @@
 @import url(../forms.css/fields.css/);
 @import url(../forms.css/fields.css/sobre-evento.css);
+@import url(../forms.css/fields.css/personalizacao.css);
+@import url(../forms.css/fields.css/contato.css);
+@import url(../forms.css/fields.css/termos.css);
 
 
 
 .title-form {
-    margin: 80px 130px 0 130px;
+    padding: 5rem 8.125rem 0 8.125rem;
     font: var(--heading-md);
     color: var(--text-heading);
 }
 
 form {
-    margin: 0 130px;
+    padding: 2.5rem 8.125rem 5rem;
 }
 
 fieldset {
+    display: grid;
+    gap: 1;
     border: none;
-    margin-top: 48px;
+}
+
+fieldset + fieldset {
+    margin-top: 3rem;
 }
 
 legend {
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
     font: var(--heading-sm);
     color: var(--text-heading);
 }
@@ -28,7 +36,7 @@ label {
     font: var(--body-sm);
     color: var(--text-body);
     display: block;
-    margin: 16px 0 12px;
+    margin: 1rem 0 .75rem;
 }
 
 input[type="text"],
@@ -37,11 +45,11 @@ input[type="tel"],
 textarea {
     border: 1px solid var(--input-stroke);
     background-color: var(--input-base);
-    border-radius: 8px;
+    border-radius: .5rem;
     width: 100%;
-    height: 48px;
+    height: 3rem;
 
-    padding: 16px 13px 16px 13px;
+    padding: 1rem .8125rem 1rem .8125rem;
     color: var(--input-placeholder);
     font: var(--body-md);
     color: var(--input-placeholder);
@@ -52,4 +60,35 @@ input:focus,
 textarea:focus {
     outline: 1px solid var(--brand-light);
     border: 1px solid var(--brand-light);   
+}
+
+.btn {
+    margin-top: 3rem;
+
+   
+   display: flex;
+   justify-content: flex-end;
+
+   & .submit-btn {
+  background: url(../../assets/icons/ticket.svg)
+  center
+  left 1.25rem
+  no-repeat;
+
+    display: flex;
+  width: 209px;
+  height: 3rem;
+  padding: .8125rem 1.25rem .8125rem 3.25rem;
+  background-color: var(--brand-dark);
+  color: var(--text-heading);
+  font: var(--body-md);
+  font-weight:600;
+  border: none;
+  border-radius: .5rem;
+   }
+}
+
+.submit-btn:hover {
+  background-color: var(--brand-mid);
+  cursor: pointer;
 }
