--- a/style.css/global.css
+++ b/style.css/global.css
@@ -50,10 +50,13 @@ body {
     justify-content: center;
     align-items: center;
     background-color: black;
+    overflow: hidden;
 }
 
 main {
     background-color: var(--shape-body);
-    margin-right: 20px;
-    border-radius: 12px;
+    margin-right: 1.25rem;
+    border-radius: .75rem;
+
+    overflow: auto;
 }
