--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -4,9 +4,11 @@
     display:grid;
     grid-template-columns: 32.78% 67.21%;
     gap: 1.25rem;
-    padding:1.25rem;
+    padding:1.25rem;;
     border-radius: 1.25rem;
     background-color: var(--shape-background);
+    
+    overflow: hidden;
 }
 
 aside {
