--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -1,11 +1,12 @@
 #app {
-    width: 80rem;
-    height: 48rem;
+   
+    width: 100%;
+    height: 100vh;
     display:grid;
     grid-template-columns: 32.78% 67.21%;
     gap: 1.25rem;
     padding:1.25rem;;
-    border-radius: 1.25rem;
+    
     background-color: var(--shape-background);
     
     overflow: hidden;
